# vr_game_prototype

./: .gitignore  Cargo.toml  README.md  chickens.cfg  imgui.ini  stage.py
maps/: Town.ent  Town.lvl  level1.lvl  recreate.ent  recreate.lvl  recreate_night.ent  recreate_night.lvl  teaching.ent  teaching.lvl  testmap.lvl  toon_level.ent  toon_level.lvl  vertical-slice.ent  vertical-slice.lvl
materials/: format_directories.py
models/: Grid.ozy  Level1.ozt  Platforms.ozy  StomePlatform.ozy  Suzanne.ozy  Torus.ozy  Town.ozt  Town_Town_terrain.ozy  both.ozt  cliffface.ozy  cube.ozy  donut.ozy  dragon.ozy  hate.ozy  jetpack.ozy  low_sphere.ozy  monke.ozy  monkey.ozy  recreate.ozt  recreate_dragon_terrain.ozy  recreate_grass_terrain.ozy  recreate_hex-stones_terrain.ozy  recreate_night.ozt  recreate_stone-wall_terrain.ozy  recreate_water_terrain.ozy  recreate_wood_charcoal_terrain.ozy  recreate_wood_veneer_terrain.ozy  shoes.ozy  sphere.ozy  stick.ozy  sticky_hand  stone-platform.ozy  teaching.ozt  teaching_Material.001_terrain.ozy  teaching_cartoon-tree_terrain.ozy  teaching_dirt-ground_terrain.ozy  teaching_forest_floor_terrain.ozy  teaching_square-pavement_terrain.ozy  teapot.ozy  terrain.ozt  (+37 more)
shaders/: collision.frag  collision.vert  debug.frag  debug.vert  edit.frag  gaussian_blur.comp  gaussian_blur.frag  glyph.frag  mapped.frag  mapped.vert  mapped_instanced.vert  postfx.comp  postprocessing.frag  postprocessing.vert  prim.frag  prim.vert  prim_instanced.vert  shadow.vert  shadow_instanced.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  standard.frag  standard.vert  ui_button.vert
shaders/ui/: button.frag  glyph.vert  imgui.frag  imgui.vert
skyboxes/beach/: bk.tga  dn.tga  ft.tga  lf.tga  rt.tga  up.tga
src/: audio.rs  collision.rs  gadget.rs  gamestate.rs  main.rs  network.rs  render.rs  routines.rs  structs.rs  traits.rs  xrutil.rs
