[package]
name = "hot_chickens"
version = "0.1.0"
authors = ["Nick Driscoll <nick.a.mavros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.release]
#lto = true

[dependencies]
ozy_engine = { path = "../ozy_engine" }
glfw = "*"
gl = "*"
nalgebra-glm = "*"
raw-window-handle = "*"
rand = "0.7.3"
imgui = "0.7.0"

[dependencies.openxr]
version = "*"
features = ["static"]

[dependencies.winapi]
version = "*"
features = ["winuser"]