[package]
name = "hot_chickens"
version = "0.1.0"
authors = ["Nick Driscoll <nick.a.mavros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.release]
#lto = true

[dependencies]
ozy_engine = { path = "../ozy_engine" }
glfw = "*"
gl = "*"
nalgebra-glm = "*"
raw-window-handle = "*"
rand = "0.8.4"
image = "*"
imgui = "0.7.0"
alto = "3.0.4"
minimp3 = "0.5.1"
chrono = "*"
tinyfiledialogs = "3.3.10"

strum = { version = "0.20", features = ["derive"] }

[dependencies.openxr]
version = "*"
features = ["static"]

[dependencies.winapi]
version = "*"
features = ["winuser"]