[package]
name = "xr_prototype"
version = "0.1.0"
authors = ["Nick Driscoll <nick.a.mavros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.release]
#lto = true

[dependencies]
ozy_engine = { path = "../ozy_engine" }
#ozy_engine = { git = "https://github.com/NickDriscoll/ozy_engine" }
alto = "3.0.4"
chrono = "*"
gl = "*"
glfw = "*"
image = "*"
imgui = "0.7.0"
minimp3 = "0.5.1"
nalgebra-glm = "*"
noise = "0.7.0"
rand = "0.8.4"
raw-window-handle = "*"
tinyfiledialogs = "3.3.10"

strum = { version = "0.20", features = ["derive"] }

[dependencies.openxr]
version = "*"
features = ["static"]

[dependencies.winapi]
version = "*"
features = ["winuser"]
